Fix header spacing

--- a/src/components/Template/index.scss
+++ b/src/components/Template/index.scss
@@ -15,7 +15,8 @@
         align-items: center;
         justify-content: space-between;
         flex-direction: row;
-        margin: 0 0 0 1em;
+        margin: 0 1em;
+        padding: 1em 0 0 0;
     }
 
     &__main {
